[pf2] stat block dark mode fixes

--- a/block-system-2.0/pathfinder_2/kingdom/kingdom.css
+++ b/block-system-2.0/pathfinder_2/kingdom/kingdom.css
@@ -1,6 +1,6 @@
  {
     padding: 0px!important}
- .pf2-generic-block {
+ .pf2-feat-block {
     font-family: Tauri Regular;
     font-size: 14px;
     letter-spacing: -0.03em;
@@ -70,6 +70,8 @@
  .r_unique { background-color: #800080}
  .trait-form {
     padding: 12px}
+ .level {
+    float: right;}
  .table,  .table td,  .table th,  .table-striped,  .table-striped td,  .table-striped th {
     font-family: Tauri Regular!important;
     line-height: 1.6;
@@ -87,13 +89,13 @@
     font-size: 21px;
     font-weight: bold;
     text-transform: uppercase;}
- .subheader,  h4 {
-    background: #460606 !important;
-    color: #f6d49f !important;
+ .subheader {
+    background: #460606;
+    color: #f6d49f;
     font-family: Eczar Bold!important;
-    font-size: 18px !important;
-    font-weight: bold !important;
-    padding: 5px 10px 2px 10px!important;}
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 10px;}
  .card {
     background-color: #fffcf5 !important;
     color: #27241f;
@@ -122,11 +124,8 @@
     border: none;}
  .table-striped {
     min-width: 100%!important}
- .c {
-    text-align: center}
- .l {
-    text-align: left!important;
-    padding-right: 30px!important;}
+ .c { text-align: center}
+ .l { text-align: left!important}
  .b {
     font-weight: 800;
     color: black!important}
@@ -160,13 +159,16 @@
     text-align: center}
  .trait,  b {
     font-family: Tauri Regular!important;}
- b {
+ .descriptor,  b {
     color: #27241f!important;
     font-weight:900;
-    padding: 0px 2px;
-    background-color: #00000010;}
+    padding: 0px 2px;}
  hr { margin-top: 1px;
     margin-bottom: -14px;
     border: 0;
     border-top: 1px solid #00000060;}
- .level { margin-right:50px}
+ a { font-size:14px!important}
+ td { padding: 5px 5px!important}
+ .table-striped tr:nth-child(odd)
+{
+    background: #00000020!important;}
