--- a/block-system-2.0/pathfinder_2/monster/monster.css
+++ b/block-system-2.0/pathfinder_2/monster/monster.css
@@ -1,4 +1,4 @@
-{
+ {
    padding: 0px!important}
  .pf2-monster-block {
    font-family: Tauri Regular;
@@ -130,15 +130,18 @@
  .b {
    font-weight: 800;
    color: black!important}
- .form-control {
+ .form-control, .form-control:focus {
    display: inline-flex;
-   width: 100%;
-   color: black}
+   width: 97%;
+   color: black;
+   background: #fffcf5 !important;
+}
+.table { background: none; }
  .form-short {
    width: 100px;
    margin-right: 20px}
  .form-medium {
-   width: 500px;
+   width: 500px!important;
    margin-right: 20px}
  .rolldice {
    background-color: #460606!important;
